<resources>
    <string name="app_name">PawPal</string>
    <string name="login">Логін</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="not_have_acc">Немає аккаунта?</string>
    <string name="sign_in">Увійти</string>
    <string name="sending">Відправляємо…</string>
    <string name="no_internet_connection">Нажаль немає підключення до інтернету</string>
    <string name="confirm">Підтвердити пароль</string>
    <string name="create">Створити</string>
    <string name="lets_acquainted">Давай знайомитись</string>
    <string name="animal_name">Як звати улюбленця?</string>
    <string name="how_old_animal">Скільки років (1–100)?</string>
    <string name="so_small_text">Має бути більше 2 символів</string>
    <string name="invalid_email">Введіть існуючий email</string>
    <string name="repeat_pass">Паролі мають співпадати</string>
    <string name="get_introduction">Давай знайомитись</string>
    <string name="add">Додати</string>
    <string name="ok">OK</string>
    <string name="age_error">Вік має бути від 1 до 100</string>
    <string name="main">Головна</string>
    <string name="medicine">Медзаписи</string>
    <string name="settings">Профіль</string>
    <string name="contacts">Контакти</string>
    <string name="food">Їжа</string>
    <string name="toys">Іграшки</string>
    <string name="interesting">Цікавості</string>
    <string name="see_all">Переглянути всі</string>
    <string name="percents">%1d %%</string>
    <string name="hryvnya">%1s грн</string>
    <string name="notifications">Нагадування</string>
    <string name="history">Історія</string>
    <string name="notes">Нотатки</string>
    <string name="what">Що</string>
    <string name="is_period">Періодичне нагадування</string>
    <string name="at_date">Дата</string>
    <string name="at_time">Час</string>
    <string name="period">Період (повторювати кожні N днів)</string>
    <string name="remind">Нагадати (за N хвилин)</string>
    <string name="when_remind">Коли</string>
    <string name="et_exc_short_title">Занадто короткий запис</string>
    <string name="periodic_notifications">Періодичні нагадування</string>
</resources>